apps/pi-hole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pi-hole
  labels:
    app: pi-hole
spec:
  ingressClassName: tailscale
  rules:
    - host: pi-hole
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pi-hole-web
                port:
                  number: 80
  tls:
    - hosts:
        - pi-hole
